# hemiunu

./: .env.example  .gitignore  Dockerfile  PROJECT_PLAN.md  Procfile  README.md  TEST_PLAN.md  requirements.txt  setup.py  ws_test.js  ws_test.py
apex/: pyproject.toml
apex-server/: .gitignore  Dockerfile  PROJECT.md  apex-landing-decisions.md  apex-landing.html  apex_img.py  cli.py  main.py  mcp_boss_tools.py  pyproject.toml
apex-server/apex_server/: __init__.py  config.py  main.py
apex-server/apex_server.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
apex-server/apex_server/auth/: __init__.py  firebase.py  models.py  routes.py  service.py
apex-server/apex_server/github/: __init__.py
apex-server/apex_server/integrations/: daytona_service.py  telegram.py  telegram_auth.py
apex-server/apex_server/llm/: __init__.py
apex-server/apex_server/projects/: filesystem.py  generator.py  models.py  routes.py  structured_edit.py  websocket.py
apex-server/apex_server/shared/: __init__.py  database.py  dependencies.py  tools.py
apex-server/apex_server/sprints/: __init__.py  models.py  routes.py  runner.py  service.py  simple_runner.py  websocket.py
apex-server/apex_server/tenants/: __init__ 2.py  models.py  service 2.py
apex-server/apex_server/workers/: __init__.py  config.py  tools.py
apex-server/docs/: AI_TEAM.md  ARCHITECTURE.md  DAYTONA.md  GITHUB_TEMPLATE_FLOW.md  SCALING_20_AGENTS.md  SUPABASE.md
apex-server/poc/: llm_with_tools.py  llm_with_tools_openai.py  requirements.txt
apex/apex/: __init__.py  mcp-agents.json
apex/apex/build-a-simple-todo-list-with/: CONTEXT.md  CRITERIA.md  DESIGN.md  PLAN.md  RETROSPECTIVE.md  SECURITY_AUDIT.md  database.py  main.py  requirements.txt  todos.db
apex/apex/build-an-e-commerce-site-with/: .env.example  CONTEXT.md  CRITERIA.md  DESIGN.md  PLAN.md  ecommerce.db  main.py  models.py  railway.toml  requirements.txt  test_logic.py
apex/apex/bygg-en-kontaktbok-med-sqlite/: CONTEXT.md  CRITERIA.md  DESIGN.md  PLAN.md  README.md  RETROSPECTIVE.md  SECURITY_AUDIT.md  contacts.db  database.py  main.py  models.py  requirements.txt  test_main.py
apex/apex/cli/: __init__.py  main.py
apex/apex/core/: __init__.py  config.py  mcp_server.py
apex/apex/portfolio-site-with-4-pages--h/: CONTEXT.md  CRITERIA.md  DESIGN.md  PLAN.md  README.md  RETROSPECTIVE.md  SECURITY_AUDIT.md  main.py  requirements.txt
apex/apex/prompts/: __init__.py  _base.md  architect.md  chef.md  devops.md  e2e.md  frontend.md  reviewer.md  security.md  tester.md
apex/apex/tools/: __init__.py  base.py  boss.py  communication.py  delegation.py  (+4 more)
apex/bygg-en-expense-tracker-med-po/: CONTEXT.md  CRITERIA.md  DESIGN.md  PLAN.md  RETROSPECTIVE.md  database.py  expense_tracker.db  main.py  models.py  requirements.txt  test_api.py  test_expenses_api.py  test_summary_endpoint.py  test_summary_multi_category.py
apex/docs/: PLAYBOOK.md  README.md  TESTING.md  WORKER_MATRIX.md
(+746 files in other folders)
