[project]
name = "apex-server"
version = "0.1.0"
description = "Multi-tenant SaaS server for AI development teams"
requires-python = ">=3.11"
dependencies = [
    # Web
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.6",

    # Database
    "sqlalchemy>=2.0.25",
    "alembic>=1.13.1",
    "psycopg2-binary>=2.9.9",

    # Auth
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",

    # LLM
    "anthropic>=0.18.0",
    "openai>=1.10.0",

    # Memory (Mem0)
    "mem0ai>=0.1.0",
    "qdrant-client>=1.7.0",

    # Utils
    "httpx>=0.26.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["apex_server*"]
