[project]
name = "apex-server"
version = "0.1.0"
description = "Multi-tenant SaaS server for AI development teams"
requires-python = ">=3.11"
dependencies = [
    # Web
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.6",

    # Database
    "sqlalchemy>=2.0.25",
    "alembic>=1.13.1",
    "psycopg2-binary>=2.9.9",

    # Auth
    "python-jose[cryptography]>=3.3.0",
    "passlib>=1.7.4",
    "bcrypt>=3.2.0,<4.0.0",  # bcrypt 4.x is incompatible with passlib
    "firebase-admin>=6.0.0",

    # LLM
    "anthropic>=0.18.0",
    "google-generativeai>=0.4.0",
    "openai>=1.10.0",

    # Memory (Mem0)
    "mem0ai>=0.1.0",
    "qdrant-client>=1.7.0",

    # Utils
    "httpx>=0.26.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "email-validator>=2.1.0",
    "beautifulsoup4>=4.12.0",  # For web scraping
    "gitpython>=3.1.0",  # For git operations

    # Telegram
    "python-telegram-bot>=21.0",

    # Daytona (sandbox environments)
    "daytona>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["apex_server*"]
